--- a/Highcharts/Content/Site.css
+++ b/Highcharts/Content/Site.css
@@ -51,19 +51,6 @@ textarea {
     font-size: 14px;
 }
 
-.item5 {
-    grid-column: 1 / span 2;
-    grid-row: 2/ span 2;
-}
-
-.item6 {
-    grid-row: 2/ span 2;
-}
-
-.item7 {
-    grid-row: 2/ span 2;
-}
-
 
 
 
@@ -167,4 +154,83 @@ textarea {
     display: inline-flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+
+
+/* 2 COLUMN IN ROW */
+@media (max-width: 1020px) {
+
+    .grid-container {
+        display: grid;
+        grid-template-columns: 49% 49% ;
+        grid-template-rows: 400px 400px 400px;
+        grid-gap: 10px;
+        padding: 10px;
+        grid-gap: 20px;
+        /*grid-template-columns: 253px;*/
+        /*grid-template-rows: 225px 450px;*/
+    }
+
+    .item5 { /*RETENTION*/
+        grid-column: 1 / span 2;
+        grid-row: 3/ span 2;*/
+    }
+
+    .item6 { /*ACQUISITION*/
+        grid-row: 5/ span 2;
+    }
+
+    .item7 { /*PROFIT*/
+        grid-row: 5/ span 2;
+    }
+}
+
+
+
+
+
+
+/* 3 COLUMN IN ROW */
+@media (min-width: 1021px) and (max-width: 1250px) {
+
+    .grid-container {
+        display: grid;
+        grid-template-columns: 32.5% 32.5% 32.5%;
+        grid-template-rows: 400px 400px 400px;
+        grid-gap: 10px;
+        padding: 10px;
+        grid-gap: 20px;
+        /*grid-template-columns: 253px;*/
+        /*grid-template-rows: 225px 450px;*/
+    }
+
+    .item5 { /*RETENTION*/
+        grid-column: 1 / span 2;
+        grid-row: 2/ span 2;
+    }
+
+    .item7 { /*PROFIT*/
+        grid-column: 3;
+        grid-row: 2/ span 2;
+    }
+}
+
+
+/* 4 COLUMN IN ROW */
+@media (min-width: 1251px) {
+    .item5 { /*RETENTION*/
+        grid-column: 1 / span 2;
+        grid-row: 2/ span 2;
+    }
+
+    .item6 { /*ACQUISITION*/
+        grid-row: 2/ span 2;
+    }
+
+    .item7 { /*PROFIT*/
+        grid-row: 2/ span 2;
+    }
+
+
 }
