Mobile View Done

--- a/Highcharts/Views/Home/Index.cshtml
+++ b/Highcharts/Views/Home/Index.cshtml
@@ -313,9 +313,9 @@
             ACQUISITION
         </div>
 
-        <div id="chartNewPersonal" class="chart chart-row-item1"></div>
+        <div id="chartNewPersonal" class="chart-row chart-row-item1"></div>
         <div class="hr-line"></div>
-        <div id="chartNewTeam" class="chart chart-row-item2"></div>
+        <div id="chartNewTeam" class="chart-row chart-row-item2"></div>
     </div>
 
 
@@ -326,9 +326,9 @@
             PROFIT
         </div>
 
-        <div id="chartProfitPersonal" class="chart chart-row-item1"></div>
+        <div id="chartProfitPersonal" class="chart-row chart-row-item1"></div>
         <div class="hr-line"></div>
-        <div id="chartProfitTeam" class="chart chart-row-item2"></div>
+        <div id="chartProfitTeam" class="chart-row chart-row-item2"></div>
     </div>
 </div>
 
