--- a/Highcharts/Content/Site.css
+++ b/Highcharts/Content/Site.css
@@ -8,6 +8,7 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    min-width: 700px;
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -142,6 +143,9 @@ textarea {
 }
 
 .chart-row {
+    width: 100%;
+    height: 100%;
+    min-height: 300px;
     display: grid;
     /*flex-direction: row;*/
     justify-content: space-between;
@@ -160,6 +164,8 @@ textarea {
 
 /* 2 COLUMN IN ROW */
 @media (max-width: 1020px) {
+
+
 
     .grid-container {
         display: grid;
