--- a/Highcharts/Content/Site.css
+++ b/Highcharts/Content/Site.css
@@ -257,20 +257,18 @@ textarea {
 
 .tooltiptext {
     visibility: hidden;
-    width: 120px;
+    width: 140px;
     background-color: #555;
     color: #fff;
     text-align: center;
-    padding: 5px 0;
+    padding: 5px 5px;
     border-radius: 6px;
-
     /* Position the tooltip text  */
     position: absolute;
     z-index: 1;
     bottom: 125%;
     left: 50%;
     margin-left: -60px;
-
     /* Fade in tooltip */
     opacity: 0;
     transition: opacity 0.3s;
@@ -290,3 +288,12 @@ textarea {
     }
 
 
+.tooltip-small{
+    height: 50px;
+}
+.tooltip-medium {
+    height: 100px;
+}
+.tooltip-large {
+    height: 150px;
+}
